--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/F-bao/javascript#readme",
   "dependencies": {
+    "axios": "^1.3.3",
     "lodash": "^4.17.21"
   }
 }
